Create opponent HTML

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <nav>
         <ul>
+            <li><a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg" alt="Home"></a></li>
             <li><a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"></a></li>
             <li><a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scotish Flag"></a></li>
             <li><a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"></a></li>
