--- a/scotland.html
+++ b/scotland.html
@@ -20,7 +20,7 @@
             <li><a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg" alt="Home"></a></li>
             <li><a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"></a></li>
             <li><a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"></a></li>
-            <li><a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scotish Flag"></a></li>
+            <li><a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"></a></li>
             <li><a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"></a></li>
             <li><a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"></a></li>
             <li><a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"></a></li>
