Change landing page colours and general styling

--- a/index.html
+++ b/index.html
@@ -33,32 +33,34 @@
     </nav>
 
     <section class="main">
+        <h2>Timeline of Events</h2>
+        <h3>click the dates to find out more</h3>
 
         <div class="match-selector">
 
             <div id="cro">
-                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"> 13th June</a>
+                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><p>13th June</p> </a>
             </div>
             <div id="sco">
-                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"> 18th June</a>
+                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><p>18th June</p></a>
             </div>
             <div id="cze">
-                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"> 22nd June</a>
+                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><p>22nd June</p></a>
             </div>
             <div id="ger">
-                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"> 29th June</a>
+                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><p>29th June</p></a>
             </div>
             <div id="ukr">
-                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"> 3rd July</a>
+                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><p>3rd July</p></a>
             </div>
             <div id="den">
-                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"> 7th July</a>
+                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><p>7th July</p></a>
             </div>
             <div id="ita">
-                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"> 11th July</a>
+                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p></a>
             </div>
             <div id="eng">
-                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"> Three Lions</a>
+                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p></a>
             </div>
 
         </div>
