Update England page positioning

--- a/england.html
+++ b/england.html
@@ -31,12 +31,12 @@
     </nav>
     <h1>England</h1>
     <section class="england">
-        <div>
+        <div id="div1">
             column
             <p>coming home video</p> 
             <p>coming home song</p> 
         </div>
-        <div>
+        <div id="div2">
             row
             <p>team stats</p> 
             <p>team xi</p> 
