Update style sheet links and add  asset and css folders

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Its Coming Home</title>
 </head>
 <body>
@@ -71,7 +72,8 @@
     </section>
     
     <footer>
-
+        <span>Find Us On:</span>
+        <a href="https://github.com/devisis"><i class="fab fa-github fa-2x"></i></a>
     </footer>
 </body>
 </html>
