--- a/croatia.html
+++ b/croatia.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Croatia</title>
 </head>
 <body>
