Update and style the footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
     <title>Its Coming Home</title>
 </head>
@@ -40,28 +42,28 @@
         <div class="match-selector">
 
             <div id="cro">
-                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><p>13th June</p> </a>
+                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><p>13th June</p><p>Wembley Stadium</p> </a>
             </div>
             <div id="sco">
-                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><p>18th June</p></a>
+                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><p>18th June</p><p>Wembley Stadium</p></a>
             </div>
             <div id="cze">
-                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><p>22nd June</p></a>
+                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><p>22nd June</p><p>Wembley Stadium</p></a>
             </div>
             <div id="ger">
-                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><p>29th June</p></a>
+                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><p>29th June</p><p>Wembley Stadium</p></a>
             </div>
             <div id="ukr">
-                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><p>3rd July</p></a>
+                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><p>3rd July</p><p>Wembley Stadium</p></a>
             </div>
             <div id="den">
-                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><p>7th July</p></a>
+                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><p>7th July</p><p>Wembley Stadium</p></a>
             </div>
             <div id="ita">
-                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p></a>
+                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p><p>Wembley Stadium</p></a>
             </div>
             <div id="eng">
-                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p></a>
+                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p><p>Wembley Stadium</p></a>
             </div>
 
         </div>
@@ -73,7 +75,10 @@
     
     <footer>
         <span>Find Us On:</span>
-        <a href="https://github.com/devisis"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.youtube.com/user/fatv"><i class="fab fa-youtube fa-3x"></i></a>
+        <a href="https://www.github.com/devisis"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://www.facebook.com/EnglandTeam/"><i class="fab fa-facebook fa-3x"></i></a>
+        <p>Copyright  Devisis 2021</p>
     </footer>
 </body>
 </html>
