Add hero image and fix smaller screen overflow issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="css/style.css">
@@ -36,6 +36,7 @@
     </nav>
 
     <section class="main">
+        <div id="hero-img"></div>
         <h2>Timeline of Events</h2>
         <h3>click the dates to find out more</h3>
 
@@ -63,7 +64,7 @@
                 <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p><p>Wembley Stadium</p></a>
             </div>
             <div id="eng">
-                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p><p>Wembley Stadium</p></a>
+                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p></a>
             </div>
 
         </div>
@@ -74,10 +75,13 @@
     </section>
     
     <footer>
-        <span>Find Us On:</span>
-        <a href="https://www.youtube.com/user/fatv"><i class="fab fa-youtube fa-3x"></i></a>
-        <a href="https://www.github.com/devisis"><i class="fab fa-github fa-3x"></i></a>
-        <a href="https://www.facebook.com/EnglandTeam/"><i class="fab fa-facebook fa-3x"></i></a>
+        <div>  
+            <span>Find Us On:</span> 
+            <a href="https://www.youtube.com/user/fatv" target="blank"><i class="fab fa-youtube fa-3x"></i></a>
+            <a href="https://www.github.com/devisis" target="blank"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://www.facebook.com/EnglandTeam/" target="blank"><i class="fab fa-facebook fa-3x"></i></a>
+        </div>
+
         <p>Copyright  Devisis 2021</p>
     </footer>
 </body>
