Set template for the media querys

--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
         <div class="match-selector">
 
             <div id="cro">
-                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><p>13th June</p><p>Wembley Stadium</p> </a>
+                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><span><p>13th June</p><p>1 - 0</p></span></a>
             </div>
             <div id="sco">
-                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><p>18th June</p><p>Wembley Stadium</p></a>
+                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><span><p>18th June</p><p>0 - 0</p></span></a>
             </div>
             <div id="cze">
-                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><p>22nd June</p><p>Wembley Stadium</p></a>
+                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><span><p>22nd June</p><p>1 - 0</p></span></a>
             </div>
             <div id="ger">
-                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><p>29th June</p><p>Wembley Stadium</p></a>
+                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><span><p>29th June</p><p>2- 0</p></span></a>
             </div>
             <div id="ukr">
-                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><p>3rd July</p><p>Wembley Stadium</p></a>
+                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><span><p>3rd July</p><p>4 - 0</p></span></a>
             </div>
             <div id="den">
-                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><p>7th July</p><p>Wembley Stadium</p></a>
+                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><span><p>7th July</p><p>2 - 1</p></span></a>
             </div>
             <div id="ita">
-                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p><p>Wembley Stadium</p></a>
+                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><span><p>11th July</p><p>1(2) - 1 (3)</p></span></a>
             </div>
             <div id="eng">
-                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p></a>
+                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><span><p>Three Lions</p></span></a>
             </div>
 
         </div>
