Update header positioning on each page

--- a/england.html
+++ b/england.html
@@ -14,6 +14,7 @@
     <title>England</title>
 </head>
 <body>
+    <header><h1>England</h1></header>
 
     <nav>
         <ul>
@@ -29,7 +30,7 @@
         </ul>
         
     </nav>
-    <h1>England</h1>
+    
     <section class="england">
         <div id="div1">
             column
