Update table colors and make iframes responsive

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,77 +11,196 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Its Coming Home</title>
-</head>
-<body>
-    
-    <header> 
-        <h1>Euro 2020 </h1><h1> Its Coming Home</h1>
+  </head>
+  <body>
+    <header>
+      <h1>Euro 2020</h1>
+      <h1>Its Coming Home</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg" alt="Home"></a></li>
-            <li><a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"></a></li>
-            <li><a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"></a></li>
-            <li><a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"></a></li>
-            <li><a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"></a></li>
-            <li><a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"></a></li>
-            <li><a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"></a></li>
-            <li><a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"></a></li>
-            <li><a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"></a></li>
-        </ul>
+      <ul>
+        <li>
+          <a href="index.html"
+            ><img
+              src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg"
+              alt="Home"
+          /></a>
+        </li>
+        <li>
+          <a href="england.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
+              alt="English Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="croatia.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
+              alt="Croatian Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="scotland.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
+              alt="Scottish Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="czech.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
+              alt="Czech Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="germany.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
+              alt="German Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="ukraine.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
+              alt="Ukrainian Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="denmark.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
+              alt="Danish Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="italy.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
+              alt="Italian Flag"
+          /></a>
+        </li>
+      </ul>
     </nav>
 
     <section class="main">
-        <div id="hero-img"></div>
-        <h2>Timeline of Events</h2>
-        <h3>click the dates to find out more</h3>
+      <div id="hero-img"></div>
+      <h2>Timeline of Events</h2>
+      <h3>click the dates to find out more</h3>
 
-        <div class="match-selector">
-
-            <div id="cro">
-                <a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"><p>13th June</p><p>1 - 0</p></a>
-            </div>
-            <div id="sco">
-                <a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"><p>18th June</p><p>0 - 0</p></a>
-            </div>
-            <div id="cze">
-                <a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"><p>22nd June</p><p>1 - 0</p></a>
-            </div>
-            <div id="ger">
-                <a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"><p>29th June</p><p>2- 0</p></a>
-            </div>
-            <div id="ukr">
-                <a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"><p>3rd July</p><p>4 - 0</p></a>
-            </div>
-            <div id="den">
-                <a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"><p>7th July</p><p>2 - 1</p></a>
-            </div>
-            <div id="ita">
-                <a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"><p>11th July</p><p>1(2) - 1 (3)</p></a>
-            </div>
-            <div id="eng">
-                <a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"><p>Three Lions</p></a>
-            </div>
-
+      <div class="match-selector">
+        <div id="cro">
+          <a href="croatia.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
+              alt="Croatian Flag"
+            />
+            <p>13th June</p>
+            <p>1 - 0</p></a
+          >
         </div>
+        <div id="sco">
+          <a href="scotland.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
+              alt="Scottish Flag"
+            />
+            <p>18th June</p>
+            <p>0 - 0</p></a
+          >
+        </div>
+        <div id="cze">
+          <a href="czech.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
+              alt="Czech Flag"
+            />
+            <p>22nd June</p>
+            <p>1 - 0</p></a
+          >
+        </div>
+        <div id="ger">
+          <a href="germany.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
+              alt="German Flag"
+            />
+            <p>29th June</p>
+            <p>2- 0</p></a
+          >
+        </div>
+        <div id="ukr">
+          <a href="ukraine.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
+              alt="Ukrainian Flag"
+            />
+            <p>3rd July</p>
+            <p>4 - 0</p></a
+          >
+        </div>
+        <div id="den">
+          <a href="denmark.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
+              alt="Danish Flag"
+            />
+            <p>7th July</p>
+            <p>2 - 1</p></a
+          >
+        </div>
+        <div id="ita">
+          <a href="italy.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
+              alt="Italian Flag"
+            />
+            <p>11th July</p>
+            <p>1(2) - 1 (3)</p></a
+          >
+        </div>
+        <div id="eng">
+          <a href="england.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
+              alt="English Flag"
+            />
+            <p>Three Lions</p></a
+          >
+        </div>
+      </div>
 
-       <!--<img src="https://cdn.pixabay.com/photo/2015/11/12/16/23/flag-1040592_960_720.png" alt="england flag">
+      <!--<img src="https://cdn.pixabay.com/photo/2015/11/12/16/23/flag-1040592_960_720.png" alt="england flag">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/8vkMMXlgPoI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         -->
     </section>
-    
-    <footer>
-        <div>  
-            <a href="https://www.youtube.com/user/fatv" target="blank"><i class="fab fa-youtube fa-3x"></i></a>
-            <a href="https://www.github.com/devisis" target="blank"><i class="fab fa-github fa-3x"></i></a>
-            <a href="https://www.facebook.com/EnglandTeam/" target="blank"><i class="fab fa-facebook fa-3x"></i></a>
-        </div>
 
-        <p>Copyright  Devisis 2021</p>
+    <footer>
+      <div>
+        <a href="https://www.youtube.com/user/fatv" target="blank"
+          ><i class="fab fa-youtube fa-3x"></i
+        ></a>
+        <a href="https://www.github.com/devisis" target="blank"
+          ><i class="fab fa-github fa-3x"></i
+        ></a>
+        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+          ><i class="fab fa-facebook fa-3x"></i
+        ></a>
+      </div>
+
+      <p>Copyright Devisis 2021</p>
     </footer>
-</body>
+  </body>
 </html>
