--- a/croatia.html
+++ b/croatia.html
@@ -10,6 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Tourney:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css">
     <title>Croatia</title>
 </head>
@@ -30,6 +37,20 @@
         
     </nav>
     
-
+    <footer>
+        <div>
+          <a href="https://www.youtube.com/user/fatv" target="blank"
+            ><i class="fab fa-youtube fa-3x"></i
+          ></a>
+          <a href="https://www.github.com/devisis" target="blank"
+            ><i class="fab fa-github fa-3x"></i
+          ></a>
+          <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+            ><i class="fab fa-facebook fa-3x"></i
+          ></a>
+        </div>
+  
+        <p>Copyright Devisis 2021</p>
+      </footer>
 </body>
 </html>
