Update all opponent pages and edit england page layout

--- a/croatia.html
+++ b/croatia.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,46 +11,130 @@
       rel="stylesheet"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Croatia</title>
-</head>
-<body>
+  </head>
+  <body>
     <header><h1>Croatia</h1></header>
     <nav>
-        <ul>
-            <li><a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg" alt="Home"></a></li>
-            <li><a href="england.html"><img src="https://cdn.countryflags.com/thumbs/england/flag-400.png" alt="English Flag"></a></li>
-            <li><a href="croatia.html"><img src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png" alt="Croatian Flag"></a></li>
-            <li><a href="scotland.html"><img src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png" alt="Scottish Flag"></a></li>
-            <li><a href="czech.html"><img src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png" alt="Czech Flag"></a></li>
-            <li><a href="germany.html"><img src="https://cdn.countryflags.com/thumbs/germany/flag-400.png" alt="German Flag"></a></li>
-            <li><a href="ukraine.html"><img src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png" alt="Ukrainian Flag"></a></li>
-            <li><a href="denmark.html"><img src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png" alt="Danish Flag"></a></li>
-            <li><a href="italy.html"><img src="https://cdn.countryflags.com/thumbs/italy/flag-400.png" alt="Italian Flag"></a></li>
-        </ul>
-        
+      <ul>
+        <li>
+          <a href="index.html"
+            ><img
+              src="https://upload.wikimedia.org/wikipedia/en/9/96/UEFA_Euro_2020_Logo.svg"
+              alt="Home"
+          /></a>
+        </li>
+        <li>
+          <a href="england.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
+              alt="English Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="croatia.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
+              alt="Croatian Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="scotland.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
+              alt="Scottish Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="czech.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
+              alt="Czech Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="germany.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
+              alt="German Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="ukraine.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
+              alt="Ukrainian Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="denmark.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
+              alt="Danish Flag"
+          /></a>
+        </li>
+        <li>
+          <a href="italy.html"
+            ><img
+              src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
+              alt="Italian Flag"
+          /></a>
+        </li>
+      </ul>
     </nav>
-    
-    <footer>
-        <div>
-          <a href="https://www.youtube.com/user/fatv" target="blank"
-            ><i class="fab fa-youtube fa-3x"></i
-          ></a>
-          <a href="https://www.github.com/devisis" target="blank"
-            ><i class="fab fa-github fa-3x"></i
-          ></a>
-          <a href="https://www.facebook.com/EnglandTeam/" target="blank"
-            ><i class="fab fa-facebook fa-3x"></i
-          ></a>
+
+    <section class="opponent">
+      <div id="div1">
+        <img
+          id="flag"
+          src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
+          alt="Croatia Flag"
+        />
+        <div class="wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/A5QE4nMP10s"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
-  
-        <p>Copyright Devisis 2021</p>
-      </footer>
-</body>
+      </div>
+      <div id="div2">
+        <img
+          src="../images/engvscro11.png"
+          alt="England vs Croatia Starting Line Ups"
+        />
+        <img
+          src="../images/engcrostats.png"
+          alt="England vs Croatia Stats"
+        />
+      </div>
+    </section>
+
+    <footer>
+      <div>
+        <a href="https://www.youtube.com/user/fatv" target="blank"
+          ><i class="fab fa-youtube fa-3x"></i
+        ></a>
+        <a href="https://www.github.com/devisis" target="blank"
+          ><i class="fab fa-github fa-3x"></i
+        ></a>
+        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+          ><i class="fab fa-facebook fa-3x"></i
+        ></a>
+      </div>
+
+      <p>Copyright Devisis 2021</p>
+    </footer>
+  </body>
 </html>
