--- a/england.html
+++ b/england.html
@@ -95,7 +95,10 @@
 
     <section class="england">
       <div id="div1">
-        <img src="../images/theahleticenglandxi.jpg" alt="England Squad photo" />
+        <img
+          src="../images/theahleticenglandxi.jpg"
+          alt="England Team Collage"
+        />
         <div class="wrapper">
           <iframe
             width="560"
@@ -108,7 +111,7 @@
           ></iframe>
         </div>
 
-        <div class="wrapper2">
+        <div class="wrapper">
           <iframe
             width="560"
             height="315"
