Replace images of line up and stats

--- a/croatia.html
+++ b/croatia.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvscro11.png"
-          alt="England vs Croatia Starting Line Ups"
+          src="https://imgur.com/v14x1Kd"
+          alt="England vs Croatia Starting Line Up"
         />
         <img
-          src="../images/engcrostats.png"
+          src="https://imgur.com/DzRO6vO"
           alt="England vs Croatia Stats"
         />
       </div>
