--- a/czech.html
+++ b/czech.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvscze11.png"
-          alt="England vs Czech-Republic Starting Line Ups"
+          src="https://imgur.com/AdpyZBs"
+          alt="England vs Czech-Republic Starting Line Up"
         />
         <img
-          src="../images/engvsczestats.png"
+          src="https://imgur.com/xBs0Dmf"
           alt="England vs Czech-Republic Stats"
         />
       </div>
