--- a/germany.html
+++ b/germany.html
@@ -111,12 +111,12 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvsger11.png"
-          alt="England vs Croatia Starting Line Ups"
+          src="https://imgur.com/elh7pZy"
+          alt="England vs Germany Starting Line Up"
         />
         <img
-          src="../images/engvsgerstats.png"
-          alt="England vs Croatia Stats"
+          src="https://imgur.com/vK3qP1d"
+          alt="England vs Germany Stats"
         />
       </div>
     </section>
