--- a/italy.html
+++ b/italy.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvsita11.png"
-          alt="England vs Italy Starting Line Ups"
+          src="https://imgur.com/HzJiHo9"
+          alt="England vs Italy Starting Line Up"
         />
         <img
-          src="../images/engvsitastats.png"
+          src="https://imgur.com/HzJiHo9"
           alt="England vs Italy Stats"
         />
       </div>
