--- a/scotland.html
+++ b/scotland.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvssco11.png"
-          alt="England vs Scotland Starting Line Ups"
+          src="https://imgur.com/xXlJkcf"
+          alt="England vs Scotland Starting Line Up"
         />
         <img
-          src="../images/engvsscostats.png"
+          src="https://imgur.com/WWtwIjf"
           alt="England vs Scotland Stats"
         />
       </div>
