--- a/ukraine.html
+++ b/ukraine.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvsukr11.png"
-          alt="England vs Ukraine Starting Line Ups"
+          src="https://imgur.com/8GDduYj"
+          alt="England vs Ukraine Starting Line Up"
         />
         <img
-          src="../images/engvsukrstats.png"
+          src="https://imgur.com/cPGJnbv"
           alt="England vs Ukraine Stats"
         />
       </div>
