--- a/denmark.html
+++ b/denmark.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="../images/engvsden11.png"
-          alt="England vs Denmark Starting Line Ups"
+          src="https://imgur.com/UfrUqfZ"
+          alt="England vs Denmark Starting Line Up"
         />
         <img
-          src="../images/engvsdenstats.png"
+          src="https://imgur.com/om6rVYb"
           alt="England vs Denmark Stats"
         />
       </div>
