Add scores to each header

--- a/croatia.html
+++ b/croatia.html
@@ -21,7 +21,7 @@
     <title>Croatia</title>
   </head>
   <body>
-    <header><h1>Croatia</h1></header>
+    <header><h1>Croatia 0 - 1 England</h1></header>
     <nav>
       <ul>
         <li>
