--- a/denmark.html
+++ b/denmark.html
@@ -21,7 +21,7 @@
     <title>Denmark</title>
   </head>
   <body>
-    <header><h1>Denmark</h1></header>
+    <header><h1>Denmark 1 - 2 England</h1></header>
     <nav>
       <ul>
         <li>
