--- a/germany.html
+++ b/germany.html
@@ -21,7 +21,7 @@
     <title>Germany</title>
   </head>
   <body>
-    <header><h1>Germany</h1></header>
+    <header><h1>Germany 0 - 2 England </h1></header>
     <nav>
       <ul>
         <li>
