--- a/scotland.html
+++ b/scotland.html
@@ -21,7 +21,7 @@
     <title>Scotland</title>
   </head>
   <body>
-    <header><h1>Scotland</h1></header>
+    <header><h1>Scotland 0 - 0 England</h1></header>
     <nav>
       <ul>
         <li>
