--- a/czech.html
+++ b/czech.html
@@ -21,7 +21,7 @@
     <title>Czech-Republic</title>
   </head>
   <body>
-    <header><h1>Czech-Republic</h1></header>
+    <header><h1>Czech-Republic 0 - 1 England</h1></header>
     <nav>
       <ul>
         <li>
