--- a/italy.html
+++ b/italy.html
@@ -21,7 +21,7 @@
     <title>Italy</title>
   </head>
   <body>
-    <header><h1>Italy</h1></header>
+    <header><h1>Italy 1(3) - 1 (2) England</h1></header>
     <nav>
       <ul>
         <li>
